# monica

./: .envrc  .gitignore  .linear.toml  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  Cargo.toml  ISSUES.md  MEMO.md  PROGRESS.md  README.md  TODO.md  atlas.hcl  clippy.toml  components.json  index.html  justfile  knip.json  lefthook.yml  narrative.md  package.json  tsconfig.json  vite.config.ts
crates/claude-agent-sdk/: CLAUDE.md  Cargo.toml  GOTCHAS.md  TODO.md
crates/claude-agent-sdk/examples/: capture_fixtures.rs  chat.rs
crates/claude-agent-sdk/src/: callbacks.rs  lib.rs  parser.rs  query.rs
crates/claude-agent-sdk/src/control/: mod.rs
crates/claude-agent-sdk/src/transport/: mod.rs  subprocess.rs
crates/claude-agent-sdk/src/types/: hooks.rs  identifiers.rs  introspection.rs  mcp.rs  messages.rs  mod.rs  options.rs  permissions.rs  usage.rs
crates/claude-agent-sdk/tests/: conformance.rs  live_smoke.rs  transcript_drift.rs  wire_drift.rs
crates/claude-agent-sdk/tests/common/: mod.rs
crates/claude-agent-sdk/tests/fixtures/: basic_turn.jsonl
crates/monica-adapters/: Cargo.toml
crates/monica-adapters/src/: fs_util.rs  http.rs  lib.rs  test_support.rs
crates/monica-adapters/src/agents/: config.rs  decode.rs  mod.rs
crates/monica-adapters/src/assets/: gc.rs  mod.rs
crates/monica-adapters/src/claude/: mod.rs  transcript.rs  watch.rs
crates/monica-adapters/src/filesystem/: explanations.rs  mod.rs  notebook.rs  notebook_gateway.rs  outputs.rs  scaffold.css  scaffold.rs  shell_scaffold.rs  workspace.rs
crates/monica-adapters/src/git/: mod.rs  worktree.rs
crates/monica-adapters/src/github/: api.rs  auth.rs  mod.rs
crates/monica-adapters/src/ogp/: mod.rs
crates/monica-adapters/src/process/: mod.rs  setup.rs
crates/monica-agent-runtime-protocol/: Cargo.toml
crates/monica-agent-runtime-protocol/src/: lib.rs
crates/monica-api/: Cargo.toml
crates/monica-api/src/: asset.rs  bench.rs  claude_session.rs  error.rs  explanation.rs  github.rs  lib.rs  link_preview.rs  note.rs  settings.rs  status.rs  task.rs  task_run.rs  terminal.rs
crates/monica-app/: CLAUDE.md  Cargo.toml  tauri.conf.json
crates/monica-app/capabilities/: default.json
crates/monica-app/icons/: icon.icns
crates/monica-app/src/: clipboard_commands.rs  event_sink.rs  lib.rs  main.rs  pty_commands.rs  ptyd.rs  shell_path.rs  task_commands.rs  terminal_commands.rs  window_commands.rs  workboard_commands.rs
crates/monica-app/src/commands/: artifact.rs  clipboard.rs  debug.rs  editor.rs  git.rs  mod.rs  notebook.rs  plan.rs  pull_request.rs  task.rs  terminal.rs  text.rs
crates/monica-app/src/schedulers/: pull_request_sync.rs
crates/monica-app/src/services/: mod.rs  run_settlement.rs  task_runner.rs
crates/monica-application/: Cargo.toml
crates/monica-application/src/: bench.rs  claude_runtime.rs  error.rs  events.rs  execution_profile.rs  github.rs  input.rs  lib.rs  lifecycle.rs  notification.rs  observation.rs  ports.rs  prelude.rs  queries.rs  sdk.rs  terminal_state.rs
crates/monica-application/src/domain/: mod.rs
crates/monica-browser-bridge/: Cargo.toml
crates/monica-browser-bridge/src/: batch.rs  jsonl.rs  lib.rs  main.rs  origin.rs  protocol.rs  server.rs  translate.rs
crates/monica-browser-bridge/tests/: server.rs
crates/monica-claude-sdk/: Cargo.toml  README.md
crates/monica-claude-sdk/examples/: ask.rs  chat.rs  open_session.rs  send_text.rs
crates/monica-claude-sdk/src/: lib.rs  runtime.rs  session.rs
crates/monica-claude-sdk/tests/: open.rs  runtime.rs  send.rs
crates/monica-cli/: Cargo.toml
crates/monica-cli/src/: auth.rs  event_sink.rs  explain.rs  hook.rs  issue.rs  main.rs  note.rs  notebooks.rs  notify.rs  project.rs  repo.rs  session.rs  table.rs
crates/monica-cli/tests/: explain.rs
crates/monica-core/: Cargo.toml
crates/monica-core/src/: app.rs  claude.rs  cmd.rs  db.rs  github.rs  github_auth.rs  hook.rs  lib.rs  manifest.rs  migrations.rs  model.rs  paths.rs  run.rs  shell.rs  start.rs  store.rs  test_support.rs
crates/monica-core/src/domain/: artifact.rs  (+13 more)
crates/monica-desktop/: CLAUDE.md  Cargo.toml  tauri.conf.json
crates/monica-desktop/capabilities/: default.json
crates/monica-desktop/icons/: icon.icns
crates/monica-desktop/src/: agent_runtime_events.rs  agent_runtime_server.rs  bridge.rs  event_sink.rs  lib.rs  main.rs  native_menu.rs  ptyd.rs  sdk_server.rs  shell_path.rs
crates/monica-domain/: Cargo.toml
crates/monica-domain/src/: agent_signal.rs  branch.rs  claude_session.rs  error.rs  explanation.rs  external_reference.rs  ids.rs  json.rs  lib.rs  note.rs  note_doc.rs  note_markdown.rs  notebook.rs  notification.rs  project.rs  refs.rs  status.rs  task.rs  task_run.rs  terminal_session.rs
crates/monica-domain/tests/: note_doc_roundtrip.rs  note_markdown.rs
crates/monica-infra/: CLAUDE.md  Cargo.toml  build.rs
crates/monica-infra/src/: lib.rs  runtime.rs  test_support.rs
crates/monica-pty/: Cargo.toml
crates/monica-pty/src/: client.rs  lib.rs  manager.rs  session.rs  transcript.rs  types.rs
crates/monica-ptyd/: Cargo.toml
crates/monica-ptyd/src/: main.rs
crates/monica-ptyd/tests/: daemon.rs
crates/monica-runtime/: Cargo.toml
crates/monica-runtime/src/: asset_gc.rs  claude_session_drain.rs  lib.rs  notification_drain.rs  pr_sync.rs  transcript_watch.rs
crates/monica-storage-sqlite/: CLAUDE.md  Cargo.toml
crates/monica-storage-sqlite/src/: lib.rs  row.rs  tests.rs
crates/monica-terminal-client/: Cargo.toml
crates/monica-terminal-client/src/: lib.rs
crates/monica-terminal-daemon/: Cargo.toml
crates/monica-terminal-daemon/src/: lib.rs  manager.rs  transcript.rs
crates/monica-terminal-protocol/: Cargo.toml
crates/monica-terminal-protocol/src/: input.rs  lib.rs
crates/monica-web/: Cargo.toml  build.rs
crates/monica-web/src/: explanations.rs  lib.rs  response.rs  tests.rs
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/terminal/: commands.rs  manager.rs  mod.rs  pty.rs  reader.rs  session.rs
(+644 files in other folders)
