[package]
name = "claude-agent-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Rust port of the Claude Agent SDK driving `claude` via stream-json I/O"

[dependencies]
async-trait = "0.1"
futures-core = { version = "0.3", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
serde_json = "1.0"
# std feature は serde_json feature の暗黙の前提（rc 版の feature 宣言漏れ）。
# workspace ビルドでは他 crate 経由で有効化されるが、-p 単独ビルドで壊れるため明示する
specta = { version = "=2.0.0-rc.25", default-features = false, features = [
  "derive",
  "std",
  "serde_json",
] }
thiserror = "2.0"
tokio = { version = "1.52.3", default-features = false, features = [
  "io-util",
  "macros",
  "process",
  "rt",
  "sync",
  "time",
] }
tokio-util = { version = "0.7", default-features = false }
typed-builder = "0.23"

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt", "time"] }
