[package]
name = "monica-adapters"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[dependencies]
monica-application = { path = "../monica-application" }
monica-domain = { path = "../monica-domain" }
monica-paths = { path = "../monica-paths" }
anyhow = "1.0.102"
octocrab = { version = "0.53.1", default-features = false, features = [
  "default-client",
  "jwt-rust-crypto",
  "rustls",
  "rustls-ring",
] }
reqwest = { version = "0.13.3", default-features = false, features = [
  "form",
  "json",
  "rustls-no-provider",
] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
tokio = { version = "1.52.3", default-features = false, features = ["sync", "time"] }

[dev-dependencies]
ctor = "0.8"
monica-storage-sqlite = { path = "../monica-storage-sqlite" }
