[package]
name = "monica-api"
version = "0.1.0"
edition = "2021"
# Deps allow lower, but we standardize on the dev/CI stable toolchain.
rust-version = "1.95"

[dependencies]
monica-application = { path = "../monica-application" }
monica-domain = { path = "../monica-domain" }
monica-settings = { path = "../monica-settings" }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
specta = { version = "=2.0.0-rc.25", default-features = false, features = ["derive", "serde_json"] }
specta-typescript = { version = "=0.0.12", default-features = false }
