[package]
name = "monica-app"
version = "0.1.0"
description = "monica desktop app"
authors = ["ashigirl96"]
edition = "2021"

[lib]
name = "monica_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [] }

[dependencies]
monica-core = { path = "../monica-core" }
tauri = { version = "2", default-features = false, features = ["wry", "macos-private-api"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
