[package]
name = "monica-app"
version = "0.1.0"
description = "monica desktop app"
authors = ["ashigirl96"]
edition = "2021"

[lib]
name = "monica_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [] }

[dependencies]
log = "0.4"
monica-core = { path = "../monica-core" }
monica-infra = { path = "../monica-infra" }
tauri = { version = "2", default-features = false, features = ["wry", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-opener = { version = "2", default-features = false }
