[package]
name = "monica-app"
version = "0.1.0"
description = "monica desktop app"
authors = ["ashigirl96"]
edition = "2021"

[lib]
name = "monica_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [] }

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["std"] }
log = "0.4"
monica-core = { path = "../monica-core" }
monica-infra = { path = "../monica-infra" }
monica-pty = { path = "../monica-pty" }
tauri = { version = "2", default-features = false, features = ["wry", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-mcp-bridge = { version = "0.11", default-features = false }
tauri-plugin-opener = { version = "2", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSString",
  "NSArray",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "NSPasteboard",
  "NSImage",
  "NSPasteboardItem",
] }
