[package]
name = "monica-claude-sdk"
version = "0.1.0"
description = "Drive interactive Claude Code sessions in Monica's Workbench over the ptyd UDS"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = { version = "0.22", default-features = false, features = ["std"] }
monica-domain = { path = "../monica-domain" }
monica-paths = { path = "../monica-paths" }
monica-sdk-protocol = { path = "../monica-sdk-protocol" }
monica-storage-sqlite = { path = "../monica-storage-sqlite" }
monica-terminal-client = { path = "../monica-terminal-client" }
monica-terminal-protocol = { path = "../monica-terminal-protocol" }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
uuid = { version = "1", default-features = false, features = ["std", "v4"] }
