[package]
name = "monica-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monica"
path = "src/main.rs"

[dependencies]
monica-application = { path = "../monica-application" }
monica-domain = { path = "../monica-domain" }
monica-runtime = { path = "../monica-runtime" }
monica-paths = { path = "../monica-paths" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1.0.102"
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
tokio = { version = "1.52.3", default-features = false, features = ["net", "rt", "time"] }

[dev-dependencies]
monica-storage-sqlite = { path = "../monica-storage-sqlite" }
