[package]
name = "monica-core"
version = "0.1.0"
edition = "2021"
# Deps allow lower, but we standardize on the dev/CI stable toolchain.
rust-version = "1.95"

[dependencies]
anyhow = "1.0.102"
log = "0.4"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
specta = { version = "=2.0.0-rc.25", default-features = false, features = [
  "serde_json",
], optional = true }
specta-typescript = { version = "=0.0.12", default-features = false, optional = true }

[features]
specta = ["dep:specta", "dep:specta-typescript"]

[dev-dependencies]
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt"] }
