[package]
name = "monica-desktop"
version = "0.1.0"
description = "monica desktop app"
authors = ["ashigirl96"]
edition = "2021"

[lib]
name = "monica_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [] }

[dependencies]
anyhow = "1.0"
log = "0.4"
monica-api = { path = "../monica-api" }
monica-application = { path = "../monica-application" }
serde = { version = "1", default-features = false, features = ["derive"] }
monica-runtime = { path = "../monica-runtime" }
monica-paths = { path = "../monica-paths" }
monica-terminal-client = { path = "../monica-terminal-client" }
monica-terminal-protocol = { path = "../monica-terminal-protocol" }
specta = { version = "=2.0.0-rc.25", default-features = false, features = ["serde_json"] }
specta-typescript = { version = "=0.0.12", default-features = false }
tauri = { version = "2", default-features = false, features = [
  "wry",
  "macos-private-api",
  "protocol-asset",
] }
tauri-specta = { version = "=2.0.0-rc.25", default-features = false, features = [
  "derive",
  "typescript",
] }
tauri-plugin-log = "2"
tauri-plugin-mcp-bridge = { version = "0.11", default-features = false }
tauri-plugin-opener = { version = "2", default-features = false }
tauri-plugin-store = { version = "2", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSArray"] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "NSPasteboard",
  "NSImage",
  "NSPasteboardItem",
] }
