[package]
name = "monica-infra"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[dependencies]
monica-core = { path = "../monica-core" }
anyhow = "1.0.102"
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.5.0"
octocrab = { version = "0.51.0", default-features = false, features = [
  "default-client",
  "jwt-rust-crypto",
  "rustls",
  "rustls-ring",
] }
reqwest = { version = "0.13.3", default-features = false, features = [
  "form",
  "json",
  "rustls-no-provider",
] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
tokio = { version = "1.52.3", default-features = false, features = ["sync", "time"] }
specta = { version = "=2.0.0-rc.25", default-features = false, optional = true }
specta-typescript = { version = "=0.0.12", default-features = false, optional = true }

[features]
specta = ["dep:specta", "dep:specta-typescript", "monica-core/specta"]
