[package]
name = "monica-pty"
version = "0.1.0"
description = "PTY session management for Monica terminal"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = { version = "0.22", default-features = false, features = ["std"] }
log = "0.4"
portable-pty = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
