[package]
name = "monica-ptyd"
version = "0.1.0"
description = "Monica PTY daemon: owns terminal sessions independently of the app lifecycle"
edition = "2021"

[dependencies]
anyhow = "1.0"
libc = { version = "0.2", default-features = false }
log = { version = "0.4", features = ["std"] }
monica-terminal-daemon = { path = "../monica-terminal-daemon" }

[dev-dependencies]
base64 = { version = "0.22", default-features = false, features = ["std"] }
monica-terminal-client = { path = "../monica-terminal-client" }
monica-terminal-protocol = { path = "../monica-terminal-protocol" }
