[package]
name = "monica-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[dependencies]
monica-application = { path = "../monica-application" }
monica-adapters = { path = "../monica-adapters" }
monica-storage-sqlite = { path = "../monica-storage-sqlite" }
anyhow = "1.0.102"
log = "0.4"
tokio = { version = "1.52.3", default-features = false, features = ["rt", "net", "time"] }
