[package]
name = "monica-storage-sqlite"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[dependencies]
monica-application = { path = "../monica-application" }
monica-domain = { path = "../monica-domain" }
monica-paths = { path = "../monica-paths" }
anyhow = "1.0.102"
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2.6.0"
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
