[package]
name = "monica-terminal-protocol"
version = "0.1.0"
description = "Wire protocol for the Monica terminal daemon (serde DTOs, version handshake)"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["std"] }
