[package]
name = "monica-web"
version = "0.1.0"
edition = "2021"
description = "Monica HTTP server for external browser access"

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
log = "0.4"
monica-api = { path = "../monica-api" }
monica-application = { path = "../monica-application" }
monica-domain = { path = "../monica-domain" }
monica-paths = { path = "../monica-paths" }
monica-runtime = { path = "../monica-runtime" }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["net", "rt"] }

[dev-dependencies]
ctor = "0.8"
http-body-util = { version = "0.1", default-features = false }
monica-storage-sqlite = { path = "../monica-storage-sqlite" }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
